Sun Jul 31 02:20:08 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * Updated docgen to generate rdoc again with the new repo structure
	* added new restart command to the core bot, quits irc and reexecs the
	bot, to pick up new code/libraries etc.

Sat Jul 30 22:33:36 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * Config items are now objects, various types are available.
	* The config wizard will now use registered config items if :wizard is set
    to true for those items. It will ask questions in the order they were
		registered.
	* The config module now works for doing runtime configuration.
	* misc refactoring

Sat Jul 30 01:19:32 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * config module for configuring the running bot via IRC
	* BotConfig.register method for various modules and any plugin to register
	bot configuration which the new config module will expose for them.
	* various other tweaks as I continue to refactor..

Fri Jul 29 13:07:56 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * Moved some stuff out of util.rb into the plugins that actually need
	them. Those methods didn't belong in util as they were plugin-specific.
	* moved a few more plugins to use map() where appropriate
	* made the url plugin only store unique urls

Thu Jul 28 23:45:26 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * Reworked the Timer module. The Timer now has a smart thread manager to
	start/stop the tick() thread. This means the timer isn't called every 0.1
	seconds to see what needs doing, which is much more efficient
  * reworked the ircsocket queue mechanism to use a Timer
	* reworked the nickserv plugin to use maps
	* made server.reconnect_wait configurable
	* added Class tracing mechanism to bin/rbot, use --trace Classname for
	debugging

Tue Jul 26 14:41:34 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * Prevent multiple plugin registrations of the same name
	* reworking the config system to use yaml for persistence
	* reworking the config system key names