@@ -1,3 +1,9 @@
+Tue Aug 02 16:27:36 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>
+
+  * Fixed the new http.proxy* settings, they work!
+	* Fixed a bug with auth-checking for the config module
+	* misc tweaks
+
 Sun Jul 31 02:20:08 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>
 
   * Updated docgen to generate rdoc again with the new repo structure
